--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,14 @@
 #
 aiofiles==23.2.1
     # via -r requirements.in
+aiohttp==3.9.3
+    # via python-binance
 aioitertools==0.11.0
     # via -r requirements.in
+aiosignal==1.3.1
+    # via aiohttp
+attrs==23.2.0
+    # via aiohttp
 backoff==2.2.1
     # via coinbase-advanced-py
 certifi==2024.2.2
@@ -24,14 +30,26 @@ cryptography==42.0.5
     # via coinbase-advanced-py
 cycler==0.12.1
     # via matplotlib
+dateparser==1.2.0
+    # via python-binance
 fonttools==4.49.0
     # via matplotlib
+frozenlist==1.4.1
+    # via
+    #   aiohttp
+    #   aiosignal
 idna==3.6
-    # via requests
+    # via
+    #   requests
+    #   yarl
 kiwisolver==1.4.5
     # via matplotlib
 matplotlib==3.8.3
     # via -r requirements.in
+multidict==6.0.5
+    # via
+    #   aiohttp
+    #   yarl
 numpy==1.26.4
     # via
     #   contourpy
@@ -42,21 +60,42 @@ pillow==10.2.0
     # via matplotlib
 pycparser==2.21
     # via cffi
+pycryptodome==3.20.0
+    # via python-binance
 pyjwt==2.8.0
     # via coinbase-advanced-py
 pyparsing==3.1.1
     # via matplotlib
-python-dateutil==2.9.0
-    # via matplotlib
+python-binance==1.0.19
+    # via -r requirements.in
+python-dateutil==2.9.0.post0
+    # via
+    #   dateparser
+    #   matplotlib
+pytz==2024.1
+    # via dateparser
+regex==2023.12.25
+    # via dateparser
 requests==2.31.0
-    # via coinbase-advanced-py
+    # via
+    #   coinbase-advanced-py
+    #   python-binance
 six==1.16.0
-    # via python-dateutil
+    # via
+    #   python-binance
+    #   python-dateutil
 tqdm==4.66.2
     # via -r requirements.in
+tzlocal==5.2
+    # via dateparser
+ujson==5.9.0
+    # via python-binance
 urllib3==2.2.1
     # via requests
 websockets==12.0
     # via
     #   -r requirements.in
     #   coinbase-advanced-py
+    #   python-binance
+yarl==1.9.4
+    # via aiohttp
