--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ aioitertools==0.11.0
     # via -r requirements.in
 aiosignal==1.3.1
     # via aiohttp
+annotated-types==0.6.0
+    # via pydantic
 attrs==23.2.0
     # via aiohttp
 backoff==2.2.1
@@ -62,9 +64,17 @@ pycparser==2.21
     # via cffi
 pycryptodome==3.20.0
     # via python-binance
+pydantic==2.6.3
+    # via
+    #   -r requirements.in
+    #   pydantic-settings
+pydantic-core==2.16.3
+    # via pydantic
+pydantic-settings==2.2.1
+    # via -r requirements.in
 pyjwt==2.8.0
     # via coinbase-advanced-py
-pyparsing==3.1.1
+pyparsing==3.1.2
     # via matplotlib
 python-binance==1.0.19
     # via -r requirements.in
@@ -72,6 +82,8 @@ python-dateutil==2.9.0.post0
     # via
     #   dateparser
     #   matplotlib
+python-dotenv==1.0.1
+    # via pydantic-settings
 pytz==2024.1
     # via dateparser
 regex==2023.12.25
@@ -86,6 +98,10 @@ six==1.16.0
     #   python-dateutil
 tqdm==4.66.2
     # via -r requirements.in
+typing-extensions==4.10.0
+    # via
+    #   pydantic
+    #   pydantic-core
 tzlocal==5.2
     # via dateparser
 ujson==5.9.0
