--- a/requirements.txt
+++ b/requirements.txt
@@ -4,49 +4,51 @@
 #
 #    pip-compile requirements.in
 #
-aiofiles==23.2.1
+aiofiles==24.1.0
     # via -r requirements.in
-aiohttp==3.9.3
+aiohappyeyeballs==2.3.5
+    # via aiohttp
+aiohttp==3.10.1
     # via python-binance
 aioitertools==0.11.0
     # via -r requirements.in
 aiosignal==1.3.1
     # via aiohttp
-annotated-types==0.6.0
+annotated-types==0.7.0
     # via pydantic
-attrs==23.2.0
+attrs==24.2.0
     # via aiohttp
 backoff==2.2.1
     # via coinbase-advanced-py
-certifi==2024.2.2
+certifi==2024.7.4
     # via requests
-cffi==1.16.0
+cffi==1.17.0
     # via cryptography
 charset-normalizer==3.3.2
     # via requests
-coinbase-advanced-py==1.1.3
+coinbase-advanced-py==1.4.3
     # via -r requirements.in
-contourpy==1.2.0
+contourpy==1.2.1
     # via matplotlib
-cryptography==42.0.5
+cryptography==43.0.0
     # via coinbase-advanced-py
 cycler==0.12.1
     # via matplotlib
 dateparser==1.2.0
     # via python-binance
-fonttools==4.49.0
+fonttools==4.53.1
     # via matplotlib
 frozenlist==1.4.1
     # via
     #   aiohttp
     #   aiosignal
-idna==3.6
+idna==3.7
     # via
     #   requests
     #   yarl
 kiwisolver==1.4.5
     # via matplotlib
-matplotlib==3.8.3
+matplotlib==3.9.1.post1
     # via -r requirements.in
 multidict==6.0.5
     # via
@@ -54,25 +56,28 @@ multidict==6.0.5
     #   yarl
 numpy==1.26.4
     # via
+    #   -r requirements.in
     #   contourpy
     #   matplotlib
-packaging==23.2
+packaging==24.1
     # via matplotlib
-pillow==10.2.0
+pillow==10.4.0
     # via matplotlib
-pycparser==2.21
+polars==1.4.1
+    # via -r requirements.in
+pycparser==2.22
     # via cffi
 pycryptodome==3.20.0
     # via python-binance
-pydantic==2.6.3
+pydantic==2.8.2
     # via
     #   -r requirements.in
     #   pydantic-settings
-pydantic-core==2.16.3
+pydantic-core==2.20.1
     # via pydantic
-pydantic-settings==2.2.1
+pydantic-settings==2.4.0
     # via -r requirements.in
-pyjwt==2.8.0
+pyjwt==2.9.0
     # via coinbase-advanced-py
 pyparsing==3.1.2
     # via matplotlib
@@ -86,9 +91,9 @@ python-dotenv==1.0.1
     # via pydantic-settings
 pytz==2024.1
     # via dateparser
-regex==2023.12.25
+regex==2024.7.24
     # via dateparser
-requests==2.31.0
+requests==2.32.3
     # via
     #   coinbase-advanced-py
     #   python-binance
@@ -96,17 +101,17 @@ six==1.16.0
     # via
     #   python-binance
     #   python-dateutil
-tqdm==4.66.2
+tqdm==4.66.5
     # via -r requirements.in
-typing-extensions==4.10.0
+typing-extensions==4.12.2
     # via
     #   pydantic
     #   pydantic-core
 tzlocal==5.2
     # via dateparser
-ujson==5.9.0
+ujson==5.10.0
     # via python-binance
-urllib3==2.2.1
+urllib3==2.2.2
     # via requests
 websockets==12.0
     # via
