--- a/requirements.in
+++ b/requirements.in
@@ -1,13 +1,25 @@
-tqdm
-aioitertools
-aiofiles
-websockets
-matplotlib
-coinbase-advanced-py
-python-binance
+coinbase-advanced-py==1.4.3
+websockets==12.0
 
 pydantic
 pydantic-settings
-polars
 
+tqdm
+aioitertools
+aiofiles
+
+
+seaborn
+seaborn-image
+
+plotly
+
+panel 
 numpy<2
+polars 
+pandas
+
+
+holoviews 
+bokeh 
+jupyter-bokeh
