--- a/requirements.txt
+++ b/requirements.txt
@@ -6,20 +6,22 @@
 #
 aiofiles==24.1.0
     # via -r requirements.in
-aiohappyeyeballs==2.3.5
-    # via aiohttp
-aiohttp==3.10.1
-    # via python-binance
 aioitertools==0.11.0
     # via -r requirements.in
-aiosignal==1.3.1
-    # via aiohttp
 annotated-types==0.7.0
     # via pydantic
-attrs==24.2.0
-    # via aiohttp
+asttokens==2.4.1
+    # via stack-data
 backoff==2.2.1
     # via coinbase-advanced-py
+bleach==6.1.0
+    # via panel
+bokeh==3.6.0
+    # via
+    #   -r requirements.in
+    #   holoviews
+    #   jupyter-bokeh
+    #   panel
 certifi==2024.7.4
     # via requests
 cffi==1.17.0
@@ -28,47 +30,139 @@ charset-normalizer==3.3.2
     # via requests
 coinbase-advanced-py==1.4.3
     # via -r requirements.in
+colorcet==3.1.0
+    # via holoviews
+comm==0.2.2
+    # via ipywidgets
 contourpy==1.2.1
-    # via matplotlib
+    # via
+    #   bokeh
+    #   matplotlib
 cryptography==43.0.0
     # via coinbase-advanced-py
 cycler==0.12.1
     # via matplotlib
-dateparser==1.2.0
-    # via python-binance
+decorator==5.1.1
+    # via ipython
+executing==2.1.0
+    # via stack-data
 fonttools==4.53.1
     # via matplotlib
-frozenlist==1.4.1
-    # via
-    #   aiohttp
-    #   aiosignal
+holoviews==1.19.1
+    # via -r requirements.in
 idna==3.7
-    # via
-    #   requests
-    #   yarl
+    # via requests
+imageio==2.35.1
+    # via scikit-image
+ipython==8.28.0
+    # via ipywidgets
+ipywidgets==8.1.5
+    # via jupyter-bokeh
+jedi==0.19.1
+    # via ipython
+jinja2==3.1.4
+    # via bokeh
+jupyter-bokeh==4.0.5
+    # via -r requirements.in
+jupyterlab-widgets==3.0.13
+    # via ipywidgets
 kiwisolver==1.4.5
     # via matplotlib
-matplotlib==3.9.1.post1
-    # via -r requirements.in
-multidict==6.0.5
+lazy-loader==0.4
+    # via scikit-image
+linkify-it-py==2.0.3
+    # via panel
+markdown==3.7
+    # via panel
+markdown-it-py==3.0.0
     # via
-    #   aiohttp
-    #   yarl
+    #   mdit-py-plugins
+    #   panel
+markupsafe==2.1.5
+    # via jinja2
+matplotlib==3.9.1.post1
+    # via
+    #   matplotlib-scalebar
+    #   seaborn
+    #   seaborn-image
+matplotlib-inline==0.1.7
+    # via ipython
+matplotlib-scalebar==0.8.1
+    # via seaborn-image
+mdit-py-plugins==0.4.2
+    # via panel
+mdurl==0.1.2
+    # via markdown-it-py
+networkx==3.3
+    # via scikit-image
 numpy==1.26.4
     # via
     #   -r requirements.in
+    #   bokeh
     #   contourpy
+    #   holoviews
+    #   imageio
     #   matplotlib
+    #   pandas
+    #   scikit-image
+    #   scipy
+    #   seaborn
+    #   seaborn-image
+    #   tifffile
 packaging==24.1
-    # via matplotlib
+    # via
+    #   bokeh
+    #   holoviews
+    #   lazy-loader
+    #   matplotlib
+    #   panel
+    #   plotly
+    #   pooch
+    #   scikit-image
+palettable==3.3.3
+    # via seaborn-image
+pandas==2.2.3
+    # via
+    #   -r requirements.in
+    #   bokeh
+    #   holoviews
+    #   panel
+    #   seaborn
+panel==1.5.2
+    # via
+    #   -r requirements.in
+    #   holoviews
+param==2.1.1
+    # via
+    #   holoviews
+    #   panel
+    #   pyviz-comms
+parso==0.8.4
+    # via jedi
+pexpect==4.9.0
+    # via ipython
 pillow==10.4.0
-    # via matplotlib
+    # via
+    #   bokeh
+    #   imageio
+    #   matplotlib
+    #   scikit-image
+platformdirs==4.3.6
+    # via pooch
+plotly==5.24.1
+    # via -r requirements.in
 polars==1.4.1
     # via -r requirements.in
+pooch==1.8.2
+    # via seaborn-image
+prompt-toolkit==3.0.48
+    # via ipython
+ptyprocess==0.7.0
+    # via pexpect
+pure-eval==0.2.3
+    # via stack-data
 pycparser==2.22
     # via cffi
-pycryptodome==3.20.0
-    # via python-binance
 pydantic==2.8.2
     # via
     #   -r requirements.in
@@ -77,46 +171,85 @@ pydantic-core==2.20.1
     # via pydantic
 pydantic-settings==2.4.0
     # via -r requirements.in
+pygments==2.18.0
+    # via ipython
 pyjwt==2.9.0
     # via coinbase-advanced-py
 pyparsing==3.1.2
     # via matplotlib
-python-binance==1.0.19
-    # via -r requirements.in
 python-dateutil==2.9.0.post0
     # via
-    #   dateparser
     #   matplotlib
+    #   pandas
 python-dotenv==1.0.1
     # via pydantic-settings
 pytz==2024.1
-    # via dateparser
-regex==2024.7.24
-    # via dateparser
+    # via pandas
+pyviz-comms==3.0.3
+    # via
+    #   holoviews
+    #   panel
+pyyaml==6.0.2
+    # via bokeh
 requests==2.32.3
     # via
     #   coinbase-advanced-py
-    #   python-binance
+    #   panel
+    #   pooch
+scikit-image==0.24.0
+    # via seaborn-image
+scipy==1.14.1
+    # via
+    #   scikit-image
+    #   seaborn-image
+seaborn==0.13.2
+    # via -r requirements.in
+seaborn-image==0.10.0
+    # via -r requirements.in
 six==1.16.0
     # via
-    #   python-binance
+    #   asttokens
+    #   bleach
     #   python-dateutil
+stack-data==0.6.3
+    # via ipython
+tenacity==9.0.0
+    # via plotly
+tifffile==2024.9.20
+    # via scikit-image
+tornado==6.4.1
+    # via bokeh
 tqdm==4.66.5
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   panel
+traitlets==5.14.3
+    # via
+    #   comm
+    #   ipython
+    #   ipywidgets
+    #   matplotlib-inline
 typing-extensions==4.12.2
     # via
+    #   ipython
+    #   panel
     #   pydantic
     #   pydantic-core
-tzlocal==5.2
-    # via dateparser
-ujson==5.10.0
-    # via python-binance
+tzdata==2024.2
+    # via pandas
+uc-micro-py==1.0.3
+    # via linkify-it-py
 urllib3==2.2.2
     # via requests
+wcwidth==0.2.13
+    # via prompt-toolkit
+webencodings==0.5.1
+    # via bleach
 websockets==12.0
     # via
     #   -r requirements.in
     #   coinbase-advanced-py
-    #   python-binance
-yarl==1.9.4
-    # via aiohttp
+widgetsnbextension==4.0.13
+    # via ipywidgets
+xyzservices==2024.9.0
+    # via bokeh
