--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ aioitertools==0.11.0
     # via -r requirements.in
 annotated-types==0.7.0
     # via pydantic
+asttokens==2.4.1
+    # via stack-data
 backoff==2.2.1
     # via coinbase-advanced-py
 bleach==6.1.0
@@ -18,6 +20,7 @@ bokeh==3.6.0
     # via
     #   -r requirements.in
     #   holoviews
+    #   jupyter-bokeh
     #   panel
 certifi==2024.7.4
     # via requests
@@ -29,6 +32,8 @@ coinbase-advanced-py==1.4.3
     # via -r requirements.in
 colorcet==3.1.0
     # via holoviews
+comm==0.2.2
+    # via ipywidgets
 contourpy==1.2.1
     # via
     #   bokeh
@@ -37,6 +42,10 @@ cryptography==43.0.0
     # via coinbase-advanced-py
 cycler==0.12.1
     # via matplotlib
+decorator==5.1.1
+    # via ipython
+executing==2.1.0
+    # via stack-data
 fonttools==4.53.1
     # via matplotlib
 holoviews==1.19.1
@@ -45,8 +54,18 @@ idna==3.7
     # via requests
 imageio==2.35.1
     # via scikit-image
+ipython==8.28.0
+    # via ipywidgets
+ipywidgets==8.1.5
+    # via jupyter-bokeh
+jedi==0.19.1
+    # via ipython
 jinja2==3.1.4
     # via bokeh
+jupyter-bokeh==4.0.5
+    # via -r requirements.in
+jupyterlab-widgets==3.0.13
+    # via ipywidgets
 kiwisolver==1.4.5
     # via matplotlib
 lazy-loader==0.4
@@ -66,6 +85,8 @@ matplotlib==3.9.1.post1
     #   matplotlib-scalebar
     #   seaborn
     #   seaborn-image
+matplotlib-inline==0.1.7
+    # via ipython
 matplotlib-scalebar==0.8.1
     # via seaborn-image
 mdit-py-plugins==0.4.2
@@ -116,6 +137,10 @@ param==2.1.1
     #   holoviews
     #   panel
     #   pyviz-comms
+parso==0.8.4
+    # via jedi
+pexpect==4.9.0
+    # via ipython
 pillow==10.4.0
     # via
     #   bokeh
@@ -130,6 +155,12 @@ polars==1.4.1
     # via -r requirements.in
 pooch==1.8.2
     # via seaborn-image
+prompt-toolkit==3.0.48
+    # via ipython
+ptyprocess==0.7.0
+    # via pexpect
+pure-eval==0.2.3
+    # via stack-data
 pycparser==2.22
     # via cffi
 pydantic==2.8.2
@@ -140,6 +171,8 @@ pydantic-core==2.20.1
     # via pydantic
 pydantic-settings==2.4.0
     # via -r requirements.in
+pygments==2.18.0
+    # via ipython
 pyjwt==2.9.0
     # via coinbase-advanced-py
 pyparsing==3.1.2
@@ -175,8 +208,11 @@ seaborn-image==0.10.0
     # via -r requirements.in
 six==1.16.0
     # via
+    #   asttokens
     #   bleach
     #   python-dateutil
+stack-data==0.6.3
+    # via ipython
 tenacity==9.0.0
     # via plotly
 tifffile==2024.9.20
@@ -187,8 +223,15 @@ tqdm==4.66.5
     # via
     #   -r requirements.in
     #   panel
+traitlets==5.14.3
+    # via
+    #   comm
+    #   ipython
+    #   ipywidgets
+    #   matplotlib-inline
 typing-extensions==4.12.2
     # via
+    #   ipython
     #   panel
     #   pydantic
     #   pydantic-core
@@ -198,11 +241,15 @@ uc-micro-py==1.0.3
     # via linkify-it-py
 urllib3==2.2.2
     # via requests
+wcwidth==0.2.13
+    # via prompt-toolkit
 webencodings==0.5.1
     # via bleach
 websockets==12.0
     # via
     #   -r requirements.in
     #   coinbase-advanced-py
+widgetsnbextension==4.0.13
+    # via ipywidgets
 xyzservices==2024.9.0
     # via bokeh
